--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         
-        <service android:name="edu.sjsu.smartprofiler.LocationService" android:exported="false" />
+        <service android:name="com.stalker.LocationService" android:exported="false" />
         
     </application>
 
