--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,14 +16,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <activity
+            android:name="com.stalker.HomeScreenActivity"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme" 
+            android:configChanges="orientation|keyboardHidden|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
         <activity
             android:name="com.stalker.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
@@ -31,23 +39,12 @@
             android:value="@integer/google_play_services_version" />
 
         <service
-            android:name="edu.sjsu.smartprofiler.LocationService"
+            android:name="com.stalker.LocationService"
             android:exported="false" />
 
         <activity
             android:name="com.stalker.AddToDoActivity"
             android:label="@string/title_activity_add_to_do" >
-        </activity>
-        <activity
-            android:name="com.stalker.HomeScreenActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_home_screen"
-            android:theme="@style/FullscreenTheme" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
