--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../../../Applications/adt-bundle-mac-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-android.library.reference.2=../../Downloads/TODO.zip Folder/HoloGraphLibrary
+android.library.reference.1=../Android-Bootstrap/AndroidBootstrap
+android.library.reference.2=../google-play-services_lib
 android.library=false
-android.library.reference.3=../Android-Bootstrap/AndroidBootstrap
+android.library.reference.3=../HoloGraphLibrary
