--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,19 +16,18 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name="com.stalker.HomeScreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme" 
-            android:configChanges="orientation|keyboardHidden|screenSize" >
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="com.stalker.MainActivity"
             android:label="@string/app_name" >
@@ -45,6 +44,12 @@
         <activity
             android:name="com.stalker.AddToDoActivity"
             android:label="@string/title_activity_add_to_do" >
+        </activity>
+        <activity
+            android:name="com.stalker.MapAllTODOs"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_map_all_todos"
+            android:theme="@style/FullscreenTheme" >
         </activity>
     </application>
 
