--- a/project.properties
+++ b/project.properties
@@ -12,11 +12,11 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../androidProject/Android-Bootstrap/AndroidBootstrap
-android.library.reference.2=../../../../Applications/adt-bundle-mac-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=../Android-Bootstrap/AndroidBootstrap
+android.library.reference.2=../HoloGraphLibrary
 android.library=false
-android.library.reference.3=../../Downloads/TODO.zip Folder/HoloGraphLibrary
-android.library.reference.1=../../androidProject/Android-Bootstrap/AndroidBootstrap
-android.library.reference.2=../../../../Applications/adt-bundle-mac-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../google-play-services_lib
+android.library.reference.1=../Android-Bootstrap/AndroidBootstrap
+android.library.reference.2=../HoloGraphLibrary
 android.library=false
-android.library.reference.3=../../Downloads/TODO.zip Folder/HoloGraphLibrary
+android.library.reference.3=../google-play-services_lib
