--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-<<<<<<< HEAD
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="output" path="bin"/>
-=======
-	<classpathentry kind="lib" path="libs/google-api-client-1.17.0-rc.jar"/>
-	<classpathentry kind="lib" path="libs/google-api-client-android-1.17.0-rc.jar"/>
-	<classpathentry kind="lib" path="libs/google-http-client-1.17.0-rc.jar"/>
-	<classpathentry kind="lib" path="libs/google-http-client-android-1.17.0-rc.jar"/>
-	<classpathentry kind="lib" path="libs/google-oauth-client-1.17.0-rc.jar"/>
-	<classpathentry kind="lib" path="libs/gson-2.1.jar"/>
-	<classpathentry kind="lib" path="libs/jackson-core-2.1.3.jar"/>
-	<classpathentry kind="lib" path="libs/jackson-core-asl-1.9.11.jar"/>
-	<classpathentry kind="lib" path="libs/jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="libs/protobuf-java-2.4.1.jar"/>
-	<classpathentry kind="lib" path="/Users/Ameya/Documents/Softwares/adt-bundle-mac-x86_64-20131030/sdk/extras/android/support/v7/appcompat/libs/android-support-v7-appcompat.jar"/>
-	<classpathentry kind="lib" path="/Users/Ameya/Documents/Softwares/adt-bundle-mac-x86_64-20131030/sdk/extras/android/support/v7/appcompat/libs/android-support-v4.jar"/>
+	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
->>>>>>> FETCH_HEAD
 </classpath>
