--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ bin/classes/com/stalker/LocationService.class
 bin/classes/com/stalker/MainActivity$GetAddressTask.class
 
 bin/classes/com/stalker/MainActivity.class
+
+bin/TodoStalker.apk
+
+*.ap_
