--- a/project.properties
+++ b/project.properties
@@ -11,12 +11,12 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=../HoloGraphLibrary
-android.library.reference.2=../google-play-services_lib
+target=Google Inc.:Google APIs x86:19
+android.library.reference.1=../Documents/Development/Android/workspace/AndroidBootstrap
+android.library.reference.2=../Documents/Development/Android/workspace/google-play-services_lib
 android.library=false
-android.library.reference.3=../Android-Bootstrap/AndroidBootstrap
-android.library.reference.1=../HoloGraphLibrary
-android.library.reference.2=../google-play-services_lib
+android.library.reference.3=../Documents/Development/Android/workspace/HoloGraphLibrary
+android.library.reference.1=../Documents/Development/Android/workspace/AndroidBootstrap
+android.library.reference.2=../Documents/Development/Android/workspace/google-play-services_lib
 android.library=false
-android.library.reference.3=../Android-Bootstrap/AndroidBootstrap
+android.library.reference.3=../Documents/Development/Android/workspace/HoloGraphLibrary
