--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
     <application
@@ -24,7 +24,7 @@
             android:name="com.stalker.HomeScreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen">
+            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,15 +34,15 @@
         </activity>
         <activity
             android:name="com.stalker.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
         </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-         <meta-data
-    android:name="com.google.android.maps.v2.API_KEY"
-    android:value="AIzaSyDZK2TYRjLqK-lOX-ALkUJd8276FUEPPxw"/>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDZK2TYRjLqK-lOX-ALkUJd8276FUEPPxw" />
 
         <service
             android:name="com.stalker.LocationService"
@@ -57,13 +57,18 @@
             android:name="com.stalker.ListTodoActivity"
             android:label="@string/title_activity_list_todo"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
-            </activity>
+        </activity>
         <activity
             android:name="com.stalker.MapAllTODOs"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_map_all_todos"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
-
+        </activity>
+        <activity
+            android:name="com.stalker.NotificationActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_notification"
+            android:theme="@style/FullscreenTheme" >
         </activity>
     </application>
 
