--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+gen/com/echo/holographlibrary/R.java
+
+gen/com/google/android/gms/R.java
+
+gen/com/stalker/R.java
