--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,7 +63,9 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_map_all_todos"
             android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen" >
-
+			<meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.stalker.HomeScreenActivity" />
         </activity>
     </application>
 
