--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,8 @@
         </activity>
         <activity
             android:name="com.stalker.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen">
         </activity>
 
         <meta-data
