--- a/project.properties
+++ b/project.properties
@@ -12,11 +12,11 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../Android-Bootstrap/AndroidBootstrap
-android.library.reference.2=../google-play-services_lib
+android.library.reference.1=../google-play-services_lib
+android.library.reference.2=../HoloGraphLibrary
 android.library=false
-android.library.reference.3=../HoloGraphLibrary
-android.library.reference.1=../Android-Bootstrap/AndroidBootstrap
-android.library.reference.2=../google-play-services_lib
+android.library.reference.3=../AndroidBootstrap
+android.library.reference.1=../google-play-services_lib
+android.library.reference.2=../HoloGraphLibrary
 android.library=false
-android.library.reference.3=../HoloGraphLibrary
+android.library.reference.3=../AndroidBootstrap
