--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/stalker"
+        android:icon="@drawable/ic_list"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
