--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:value="@integer/google_play_services_version" />
          <meta-data
     android:name="com.google.android.maps.v2.API_KEY"
-    android:value="AIzaSyDZK2TYRjLqK-lOX-ALkUJd8276FUEPPxw"/>
+    android:value=""/>
 
         <service
             android:name="com.stalker.LocationService"
